# ROLLER

./: .gitignore  CMakeLists.txt  build.zig
PROJECTS/ROLLER/: 3d.c  3d.h  building.c  building.h  car.c  control.c  control.h  crashdump.c  drawtrk3.c  frontend.h  frontend_config.c  frontend_pause.c  frontend_screens.c  func2.c  func2.h  func3.c  func3.h  function.c  game_render_software.c  graphics.c  horizon.c  loadtrak.c  loadtrak.h  menu_render_gpu.c  menu_render_software.c  moving.c  network.c  polyf.c  polytex.c  replay.c  roller.c  roller.h  rollerinput.c  rollerinput.h  rollersound.c  sound.c  sound.h  tower.c  transfrm.c  types.h
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  roller
cmake/: Info.plist.in
